fix(styles): adjust height for showcase cover on smaller screens

--- a/src/sass/components/_showcase-card.scss
+++ b/src/sass/components/_showcase-card.scss
@@ -68,7 +68,7 @@
   }
 
   @media (width <= 884px) {
-    height: 12.5rem;
+    height: 9.5rem;
   }
 
   @media (width <= 640px) {
